loro/test/invalid/lvalue-cadena.loro
///////////////////////////////////////////////////////////////
algoritmo lvalue para PRUEBA()
	descripcion ""
inicio
	a: cadena := "";
	a.inf := 5;  // error
	
fin algoritmo
